--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "moment-timezone": "^0.5.16",
     "mongoose": "^5.0.14",
     "mongoose-unique-validator": "^2.0.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "npm": "^6.0.0"
   }
 }
